Adding new pages receipes

--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div>
             <h1>Odin Recipes</h1>
-            <a href="./recipes/lasagna.html">Recipe Potato Soup</a>
+            <ul>
+                <li>
+                     <a href="./recipes/potato-soup.html">Recipe Potato Soup</a>
+                </li>
+                <li>
+                    <a href="./recipes/slow-cooker.html">Recipe Slow-Cooker Thai Chicken</a>
+                </li>
+                <li>
+                    <a href="./recipes/tamale-pie.html">Recipe Hot Tamale Pie</a>
+                </li>
+            </ul>
         </div>
     </main>
     <footer>
